sol